[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/login/Login.gd" type="Script" id=1]

[node name="Pnl_Login" type="Panel"]
margin_left = 0.735107
margin_top = -2.7877
margin_right = 594.735
margin_bottom = 431.212
script = ExtResource( 1 )

[node name="LE_Email" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -30.0002
margin_right = 137.5
margin_bottom = 30.0002
align = 1
placeholder_text = "E-mail"
caret_blink = true

[node name="LE_Password" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = 51.5952
margin_right = 137.5
margin_bottom = 111.595
align = 1
secret = true
placeholder_text = "Password"
caret_blink = true

[node name="Btn_Login" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 136.25
margin_right = 60.0
margin_bottom = 184.25
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
max_redirects = 4

[node name="PP_Notice" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -70.0
margin_right = 100.0
margin_bottom = 70.0

[node name="Lbl_Notice" type="Label" parent="PP_Notice"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 136.0
[connection signal="button_up" from="Btn_Login" to="." method="_on_Btn_Login_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
